# imagin3D

./: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: main.cpp
src/engine/: Engine.cpp  Engine.h
src/engine/shader_program/: ShaderProgram.cpp  ShaderProgram.h
src/shader/: Shader.cpp  Shader.h
